# add subdirectories
add_subdirectory(scripts)

# add executables
# bin programs
add_executable(pbsdsh pbsdsh.c)
add_executable(pbsnodes pbsnodes.c)
add_executable(pbs_attach pbs_attach.c)
add_executable(pbs_tmrsh pbs_tmrsh.c)
add_executable(pbs_ralter pbs_ralter.c)
add_executable(pbs_rdel pbs_rdel.c)
add_executable(pbs_rstat pbs_rstat.c)
add_executable(pbs_rsub pbs_rsub.c)
add_executable(pbs_release_nodes pbs_release_nodes.c)
add_executable(qalter qalter.c)
add_executable(qdel qdel.c)
add_executable(qdisable qdisable.c)
add_executable(qenable qenable.c)
add_executable(qhold qhold.c)
add_executable(qmgr qmgr.c)
add_executable(qmove qmove.c)
add_executable(qorder qorder.c)
add_executable(qmsg qmsg.c)
add_executable(qrerun qrerun.c)
add_executable(qrls qrls.c)
add_executable(qrun qrun.c)
add_executable(qselect qselect.c)
add_executable(qsig qsig.c)
add_executable(qstat qstat.c)
add_executable(qstart qstart.c)
add_executable(qstop qstop.c)
add_executable(qsub qsub.c)
add_executable(qterm qterm.c)

# dis bin programs
add_executable(mpiexec mpiexec.c)
add_executable(nqs2pbs nqs2pbs.c)
add_executable(pbs_lamboot pbs_lamboot.c)
add_executable(pbs_mpihp pbs_mpihp.c)
add_executable(pbs_mpiam pbs_mpilam.c)
add_executable(pbs_mpirun pbs_mpirun.c)
add_executable(pbs_remsh pbs_remsh.c)
add_executable(pbsrun pbsrun.c)
add_executable(pbsrun_unwrap pbsrun_unwrap.c)
add_executable(pbsrun_wrap pbsrun_wrap.c)

# sbin programs
add_executable(pbs_dataservice pbs_dataservice.c)
add_executable(pbs_demux pbs_demux.c)
add_executable(pbs_ds_password pbs_ds_password.c)
