add_subdirectory(Libattr)
add_subdirectory(Liblog)
add_subdirectory(Libauth)
add_subdirectory(Libnet)
add_subdirectory(Libpbs)
# order matters: libnet and libpbs must be built before libdb
add_subdirectory(Libdb)
add_subdirectory(Libpython)
add_subdirectory(Libsec)
add_subdirectory(Libsite)
add_subdirectory(Libtpp)
add_subdirectory(Libutil)